Initial results table

--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -4,3 +4,10 @@ $tiBlue: #3695d8;
 $tiPink: #E74B7D;
 $tiGreen: #4DB9C7;
 $tiWhite: #ffffff;
+
+$scoreA: #225F89;
+$scoreB: #3695d8;
+$scoreC: #86BFE7;
+$scoreD: #F6A931;
+$scoreE: #E77A31;
+$scoreF: #C74426;
