--- a/src/App.scss
+++ b/src/App.scss
@@ -2,10 +2,20 @@
 
 @import 'styles/shared.scss';
 
+html { 
+  scroll-behavior: smooth
+}
+
 h1 {
   text-align: center;
   font-family: $primaryFont;
   font-size: 38px;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-family: $primaryFont;
+  font-size: 28px;
   text-transform: uppercase;
 }
 
