--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,13 @@ h2 {
   text-transform: uppercase;
 }
 
+h3 {
+  font-family: Oswald, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
 p {
   font-family: $secondaryFont;
   font-size: 14px;
