Added state to filter buttons

--- a/src/components/Shared/FilterButton.scss
+++ b/src/components/Shared/FilterButton.scss
@@ -15,6 +15,10 @@
     border: none;
     text-align: left;
 
+    &:focus {
+        outline: none;
+    }
+
     &.active-filter {
         background: $tiPink;
     }
