--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -1,7 +1,7 @@
 $primaryFont: 'Oswald', sans-serif;
 $secondaryFont: 'Open Sans', sans-serif;
 $tiBlue: #3695d8;
-$tiPink: #E74B7D;
+$tiPink: #E5007D;
 $tiGreen: #4DB9C7;
 $tiWhite: #ffffff;
 
