--- a/src/components/ResultsTable/ResultsTable.scss
+++ b/src/components/ResultsTable/ResultsTable.scss
@@ -1,13 +1,16 @@
 @import '../../styles/shared.scss';
 
 .results-table {
-    width: 700px;
+    max-height: 1080px;
+    display: flex;
+    flex-direction: column;
+    width: 800px;
     margin-left: 40px;
     margin-top: 25px;
 }
 
 .results-letter {
-    width: 150px;
+    width: 120px;
     display: flex;
     text-align: center;
     justify-content: center;
@@ -20,11 +23,21 @@
 }
 
 .results-list {
-    min-height: 60px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    //min-height: 60px;
+    //max-height: 300px;
+    width: 100%;
     padding: 20px 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 16px;
+    grid-gap: 5px;
+}
+
+.results-container {
+    width: 680px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .results-A, .results-B, .results-C, .results-D, .results-E, .results-F {
