--- a/src/App.scss
+++ b/src/App.scss
@@ -21,14 +21,15 @@ h2 {
 
 h3 {
   font-family: Oswald, sans-serif;
-  font-size: 18px;
+  font-size: 21px;
   font-weight: 700;
   text-transform: uppercase;
 }
 
-p {
+p, ul {
   font-family: $secondaryFont;
   font-size: 14px;
+  line-height: 20px;
 }
 
 .App {
