Added margins between sections

--- a/src/containers/BestPractice.scss
+++ b/src/containers/BestPractice.scss
@@ -1,5 +1,9 @@
 @import '../styles/shared.scss';
 
+#best-practice {
+    margin-top: 100px;
+}
+
 .bp-section {
     height: 600px;
     width: 1140px;
